<resources>
    <string name="app_name">MyMoviesApp</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="posterMovies">Poster Movies</string>
    <string name="movies_name">Nama Film</string>
    <string name="description">Deskripsi</string>
    <string name="main">Main</string>
    <string name="about">About</string>
    <string name="movies_release">Release Date</string>
    <string name="director">Director</string>
    <string name="producer">Producer</string>
    <string name="language">Language</string>
    <string name="Writer">Writer</string>
    <string name="budget">Budget</string>
    <string name="music_director">Music Director</string>
    <string name="profile">Profile</string>
    <string name="photoProfile">Photo Profile</string>
    <string name="txt_nama">Nama</string>
    <string name="nama">Nadhila Shafaresta</string>
    <string name="txt_email">E-mail</string>
    <string name="email">shafarestanadhila@apps.ipb.ac.id</string>
    <string-array name="data_name">
        <item>Barbie</item>
        <item>Dilan</item>
        <item>Habibie Ainun 3</item>
        <item>Keluarga Cemara</item>
        <item>Ketika Berhenti Disini</item>
        <item>KKN di Desa Penari</item>
        <item>Laskar pelangi</item>
        <item>Mariposa</item>
        <item>Mencuri Raden Saleh</item>
        <item>Miracle in Cell No 7</item>
        <item>Ngeri-ngeri Sedap</item>
        <item>Perahu Kertas</item>
        <item>Susah Sinyal</item>
        <item>Titanic</item>
        <item>Warkop DKI Reborn</item>
    </string-array>
    <string-array name="data_description">
        <item>Its about the lives of Barbies who have different characters. All the girls are called Barbie and the boys are called Ken, but they get to know each other.</item>
        <item>Milea (Vanesha Prescilla) meets Dilan (Iqbaal Ramadhan) at a high school in Bandung. It was 1990, when Milea moved from Jakarta to Bandung. An unusual introduction then led Milea to begin to recognize Dilan uniqueness further. Dilan who is smart, kind and romantic, all, OTHER.</item>
        <item>The story of Ainun (Maudy Ayunda) as a teenager at her age, has a love story that is quite unique, intriguing and interesting.</item>
        <item>ABAH (35/Ringgo Agus Rahman), desperate to survive after his house and possessions were confiscated by debt collectors to pay a company debt caused by his brother-in-law, temporarily moved to a house in a remote village in West Java. It was his childhood home, an inheritance from his father. But she faces difficulties as her case is lost in court and her family is threatened with a lifetime of poverty in the village.</item>
        <item>Dita, a highly idealistic graphic designer with a fear of failure, meets Ed, an architect. A meeting that begins with a misunderstanding, leads to a warm conversation. Two people who are similar but not the same come together. Four years since their first meeting, Dita felt that their relationship was going nowhere, without realizing that she was always demanding what Ed wanted, but finally Ed had an accident and died. Dita was devastated and filled with guilt. Two years later, Dita tries to forget everything about Ed and tries to live her new life with Ifan, her best friend since childhood who is now her lover. Not long ago, Dita got a pair of LOOK glasses with Augmented Reality (AR) technology that can present Ed figure, exactly the same as real. Will Dita accept Ed presence again or stay with Ifan?</item>
        <item>KKN Di Desa Penari is adapted from one of the horror stories that has gone viral in 2019 via Twitter, according to the author, this story is taken from a true story of a group of students who were conducting a KKN (Real Work Lecture) program in Penari Village. It did not go smoothly, a series of horror experiences haunted them until the KKN program ended tragically.</item>
        <item>This movie is an adaptation of Andrea Hirata novel Laskar Pelangi. The story begins when Ikal (Lukman Sardi) returns to his hometown. He tells the story of his childhood when he first entered the Muhammadiyyah Elementary School. At that time, there was a problem when his class, which was to be opened by 2 teachers, Mrs. Muslimah &amp; Mr. Harfan, was short of people who had to have 10 students. Meanwhile, there were only 9 students at that time. Then came Harun as the 10th student who made the class run and saved other children who wanted to go to school. From these 10 students, Laskar Pelangi was formed, consisting of Ikal, Mahar, Lintang, Borek, A-Kiong, Syahdan, Kucai, Trapani, Sahara, and Harun. The place where Laskar Pelangi children study, SD Muhammadiyyah, is the oldest school in the Belitong area, looking so pathetic and fragile compared to the PN Timah (Timah State Company) schools where the children of the rich go to school. It is ironic that they are so poor in the midst of the wealth of PN Timah that exploits their land.</item>
        <item>Mariposa (Butterfly) is like you, I chase but you dodge. Thats the description of IQBAL GUANNA for NATASHA KAY LOOVY or ACHA. Acha is determined to get Iqbal heart, a cute, smart and known cold-hearted guy. Acha best friend, AMANDA, tries to prevent Acha intention to approach Iqbal. Amanda is afraid that Acha will get hurt and hurt her heart.</item>
        <item>The biggest heist of the century is just days away from its execution date. The gang is complete and ready to go on a mission to steal the maestro Raden Saleh painting The Capture of Diponegoro. Forgery, hacking, fighting and manipulation ensue in this planned heist run by a group of young amateurs.</item>
        <item>Dodo Rozak just wants to be a good father to his daughter, Kartika, even though he is a man of limited intelligence, acting and behaving like a child. In reality, it was Kartika who took care of her father most of the time. But both lived happily. Kartika is proud of her father who sells balloons everyday.</item>
        <item>Mr. Domu and Mak Domu, who live with Sarma, really want their three children: Domu, Gabe and Sahat, who have migrated for a long time, to come home to attend a traditional event, but they refuse to come home because of their unhappy relationship with Mr. Domu.</item>
        <item>Perahu Kertas tells the story of the ups and downs of the relationship between two human children, Kugy and Keenan. The story begins when they both attend university in Bandung. Kugy, who aspires to be a fairy tale writer, studies at the Faculty of Letters. She has a unique habit of making paper boats which she then floats down the river. Keenan, a talented young painter, is forced to study at the Faculty of Economics by his father. Together with Kugy best friend since childhood, Noni, and Noni boyfriend Eko, who is also Keenan cousin, the four of them become a tight-knit gang. From admiring each other, Kugy and Keenan secretly fall in love. But various things stand in their way. Not only that, Kugy and Noni friendship breaks when Kugy, in order to keep her heart, does not come to Noni birthday party held at Wanda house. Keenan finally goes to the house of Pak Wayan, a painter who is an old friend of Lena, as well as Keenan mentor in painting. In a troubled mood, Keenan painting creativity is stuck. Luhde, Mr. Wayan niece, manages to restore Keenan spirit. A regular collector at Wayan gallery named Remi became the first buyer. Eager to leave Bandung and her old neighborhood, Kugy struggles to graduate quickly. As soon as she graduated, Kugy brother Karel helped Kugy get an internship at an advertising agency called AdVocaDo owned by his friend Remi. Kugy work performance is brilliant, and attracts Remi attention.</item>
        <item>Ellen (Adinia Wirasti), a successful lawyer, is a single mom who rarely gets to spend time with her only child Kiara (Aurora Ribero), who eventually grows up as a rebellious teenager who mostly vents her emotions on social media. They live with Agatha (Niniek L. Karim), Ellen mother who loves Kiara dearly. When Agatha dies of a heart attack, Kiara, who was very close to her uncle since childhood, is immediately shaken. A psychologist advised Ellen to take Kiara on a vacation, spending quality time to heal the times when Ellen was too busy working. They went to Sumba, spending fun moments together. Kiara returned home with a happy heart. Back in Jakarta, Ellen was immediately greeted by a big problem at the office. The big project she was working on with Iwan (Ernest Prakasa) was in danger of falling apart. Finally, because she was busy, Ellen did not keep her promise to watch Kiara perform at the talent show competition between high schools that Kiara had been preparing for a long time. Kiara was angry and went to Sumba alone, the place where she last felt a glimmer of happiness. Will Kiara be able to trust her mother again? Will Ellen be able to knit this small family back together?</item>
        <item>Celebrate the 25th anniversary of a timeless love story. A fictionalized account of the sinking of the Titanic, Jack Dawson (Leonardo DiCaprio) and Rose DeWitt Bukater (Kate Winslet) passengers from different social classes fall in love during the maiden voyage on the dream ship which ends tragically.</item>
        <item>Warkop DKI - Dono, Kasino, Indro are tasked this time as secret police agents. They are under the command of Commander Cok, who lost his right-hand man, Karman, when he suspected money laundering in the world of Indonesian cinema. Precisely in a PH owned by Amir Muka. Warkop DKI was finally able to enter the film world and was involved in a comedy filmmaking paired with a soap opera artist who moved to the film world, Inka. During the party, Warkop DKI, who was investigating, made Inka trapped with them in a room. Warkop DKI and Inka fell unconscious. When they woke up, Warkop DKI was shocked because they were in the desert! But Inka had vanished! Warkop DKI search for Inka trail leads them on an exciting adventure in the desert.</item>
    </string-array>
    <string-array name="data_release">
        <item>July 19, 2023 (Indonesia)</item>
        <item>January 25, 2018 (Indonesia)</item>
        <item>December 19, 2019 (Indonesia)</item>
        <item>January 3, 2019 (Indonesia)</item>
        <item>July 27, 2023 (Indonesia)</item>
        <item>April 30, 2022 (Indonesia)</item>
        <item>September 26, 2008</item>
        <item>December 31, 2020 (Indonesia)</item>
        <item>August 25, 2022 (Indonesia)</item>
        <item>September 8, 2022 (Indonesia)</item>
        <item>June 2, 2022 (Indonesia)</item>
        <item>August 16, 2012 (Indonesia)</item>
        <item>December 21, 2017 (Indonesia)</item>
        <item>January 5, 1998 (Indonesia)</item>
        <item>September 12, 2019 (Indonesia)</item>
    </string-array>
    <string-array name="data_director">
        <item>Greta Gerwig</item>
        <item>Pidi Baiq\nFajar Bustomi</item>
        <item>Hanung Bramantyo</item>
        <item>Yandy Laurens</item>
        <item>Umay Shahab</item>
        <item>Awi Suryadi</item>
        <item>Riri Riza</item>
        <item>Fajar Bustomi</item>
        <item>Angga Dwimas Sasongko</item>
        <item>Hanung Bramantyo</item>
        <item>Bene Dion</item>
        <item>Hanung Bramantyo</item>
        <item>Ernest Prakasa</item>
        <item>James Cameron</item>
        <item>Rako Prijanto</item>
    </string-array>
</resources>