<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textStyle="bold"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/profileimg"
            app:layout_constraintTop_toBottomOf="@id/txt_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/photoProfile" />
        <TextView
            android:id="@+id/tv_txt_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_nama"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/iv_profile"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            />
        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/tv_txt_nama"
            android:background="@drawable/input"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:text="@string/nama"
            android:textColor="@color/purple"
            android:textColorHint="@color/purple" />
        <TextView
            android:id="@+id/tv_txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_email"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_nama"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            />
        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/tv_txt_email"
            android:background="@drawable/input"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:text="@string/email"
            android:textColor="@color/purple"
            android:textColorHint="@color/purple"/>

        <Button
            android:id="@+id/btn_home"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            android:layout_marginTop="30dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/home"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>